tests/baselines/reference/objectFreezeLiteralsDontWiden.errors.txt
objectFreezeLiteralsDontWiden.ts(7,1): error TS2322: Type '"latest"' is not assignable to type '"1011831"'.


==== objectFreezeLiteralsDontWiden.ts (1 errors) ====
    const PUPPETEER_REVISIONS = Object.freeze({
      chromium: '1011831',
      firefox: 'latest',
    });
    
    let preferredRevision = PUPPETEER_REVISIONS.chromium;
    preferredRevision = PUPPETEER_REVISIONS.firefox;
    ~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '"latest"' is not assignable to type '"1011831"'.
    